@@ -27,12 +27,31 @@
 
   <genericsetup:upgradeStep
       source="*"
-      destination="11"
+      destination="12"
       title="Reinstall tdh.metadata"
       description="Reinstall tdh.metadata"
       handler="tdh.metadata.setuphandlers.upgrade_by_reinstall"
       profile="tdh.metadata:default"
       />
+
+  <genericsetup:importStep
+       name="tdh.metadata_configureRepository"
+       title="Configure TDH metadata repository after installation"
+       description="After creating content (from profiles/default/structure), the metadata repository needs to be configured."
+       handler="tdh.metadata.setuphandlers.configure_repository">
+     <depends name="typeinfo"/>
+     <depends name="content"/>
+  </genericsetup:importStep>
+
+  <genericsetup:importStep
+       name="tdh.metadata_updateCatalog"
+       title="Update catalog"
+       description="After creating content (from profiles/default/structure),
+the catalog needs to be updated."
+       handler="tdh.metadata.setuphandlers.update_catalog">
+     <depends name="content"/>
+     <depends name="tdh.metadata_configureRepository"/>
+   </genericsetup:importStep>
 
 
     <!-- -*- extra stuff goes here -*- -->
