@@ -1,5 +1,5 @@
 <metadata>
-  <version>11</version>
+  <version>12</version>
   <dependencies>
         <dependency>profile-jcu.theme:default</dependency>
         <dependency>profile-plone.app.dexterity:default</dependency>
