@@ -1,0 +1,3 @@
+[DEFAULT]
+title=Metadata Repository
+description=Metadata repository for James Cook University's research data records.
