@@ -1,0 +1,3 @@
+[DEFAULT]
+title=Searches
+description=Metadata searches for use within the repository
