@@ -1,0 +1,3 @@
+[DEFAULT]
+title=New Collections
+description=
