@@ -13,6 +13,7 @@
   <property name="filter_content_types">True</property>
   <property name="allowed_content_types">
     <element value="tdh.metadata.datasetrecord" />
+    <element value="Topic" />
   </property>
   <property name="allow_discussion">False</property>
 
